sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: identifier expected but 'true' found.
	do {var x:Boolean==true 
                           ^AlgBubbleSort1:8: error: ')' expected but '}' found.
		}
                ^AlgBubbleSort1:15: error: Unmatched closing brace '}' ignored here
}
^